--- a/config/database.yml
+++ b/config/database.yml
@@ -14,10 +14,6 @@ test:
   username: root
   password:
 
-production:
-  adapter: mysql2
-  encoding: utf8
-  database: LMS
-  host: localhost
-  username: root
-  password:
+production: 
+  adapter: postgresql 
+  encoding: unicode
